added video stiil need to adjust content

--- a/main.css
+++ b/main.css
@@ -56,3 +56,10 @@
  .purple{
    color:#252467;
  }
+
+
+ /* start building your financial future*/
+
+ .background-2{
+     background-color:#EEEDF2;
+ }
